--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,17 @@
     <string name="SplashFragment">SplashFragment</string>
     <string name="HomeTapFragment">HomeTapFragment</string>>
     <string name="NotionFragment">NotionFragment</string>
+    <string name="SearchPasswordFragment">SearchPasswordFragment</string>
+    <string name="ProfileEditFragment">ProfileEditFragment</string>
     <string name="PreferencesFragment">PreferencesFragment</string>
+    <string name="GuidanceFragment">GuidanceFragment</string>
+    <string name="DailyReportFragment">DailyReportFragment</string>
     <string name="PostFragment">PostFragment</string>
+    <string name="LoginFragment">LoginFragment</string>
     <string name="SearchFragment">SearchFragment</string>
+    <string name="SignUpFragment">SignUpFragment</string>
     <string name="send_to_complete">전송 완료되었습니다.</string>
+    <string name="comming_soon">미구현 기능입니다.</string>
     <string name="close">닫기</string>
     <string name="ProfileTapFragment">ProfileTapFragment</string>
     <string name="ValuationTapFragment">ValuationTapFragment</string>
