--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,12 +21,15 @@
     <string name="LikeStockListFragment">LikeStockListFragment</string>
     <string name="send_to_complete">전송 완료되었습니다.</string>
     <string name="comming_soon">미구현 기능입니다.</string>
+    <string name="okComment">변경 완료</string>
+    <string name="server_offline">server offline</string>
     <string name="sent_to_email_new_password">해당 이메일로 비밀번호가 전송되었습니다.</string>
     <string name="close">닫기</string>
     <string name="ProfileTapFragment">ProfileTapFragment</string>
     <string name="ValuationTapFragment">ValuationTapFragment</string>
     <string name="kakao_app_key">d777638ad8e4d3afbccc3ee3ec032f63</string>
     <string name="CommunityTapFragment">CommunityTapFragment</string>
+    <string name="RankingFragment">RankingFragment</string>
     <integer name="screen_in_time">400</integer>
     <integer name="screen_out_time">400</integer>
     <string name="string_test">증시를 보기에 앞서 대내외 경제 여건을 살펴보면 동반 회복세를 보이던 실물경제와 금융시장이 올해 2분기를 기점으로 차별화됐다. 이에 경기와 자산 간의 괴리 발생에 따른 버블 가능성 경계심이 고조되고 있지만 급격한 조정 가능성은 제한적이라는 조언이 나온다.
